--- a/content/data/config.json
+++ b/content/data/config.json
@@ -81,7 +81,7 @@
             "phoneAltText": "My phone number",
             "email": "https://www.linkedin.com/in/zachwelshman/",
             "emailAltText": "My email",
-            "address": "312 Lovely Street, Brooklyn, NY, 123456",
+            "address": "",
             "addressAltText": "My address"
         },
         "copyrightText": "Powered by [Netlify](https://www.netlify.com/platform/)",
