--- a/content/data/config.json
+++ b/content/data/config.json
@@ -77,7 +77,7 @@
         "contacts": {
             "type": "ContactBlock",
             "title": "",
-            "phoneNumber": "",
+            "phoneNumber": "Zach Welshman, Ph.D.",
             "phoneAltText": "My phone number",
             "email": "https://www.linkedin.com/in/zachwelshman/",
             "emailAltText": "My email",
